Correct spacing on individual birth and death location

--- a/themes/colors/css/ash.css
+++ b/themes/colors/css/ash.css
@@ -1632,6 +1632,10 @@ dt {
 	margin-right:15px;
 }
 
+#mainfacts {
+white-space: nowrap;
+}
+
 #hitcounter {
 	display: block;
 	width: 100%;
